# MACKI_data

./: .gitattributes  README.md  pyproject.toml
app/: test.py
app/data_processing/: case.py  procedure.py  session.py
app/web/: session_page.py
data/first_flight/app/: data4.csv
data/first_flight/board/: LOGS1.TXT  LOGS10.TXT  LOGS13.TXT  LOGS15.TXT  LOGS16.TXT  LOGS18.TXT  LOGS23.TXT  LOGS26.TXT  LOGS3.TXT  LOGS30.TXT  LOGS31.TXT  LOGS34.TXT  LOGS35.TXT  LOGS36.TXT  LOGS37.TXT  LOGS4.TXT  LOGS40.TXT  LOGS42.TXT  LOGS43.TXT  LOGS44.TXT  LOGS45.TXT  LOGS7.TXT  MACUS10.TXT  MACUS11.TXT  MACUS12.TXT  MACUS13.TXT  MACUS14.TXT  MACUS15.TXT  MACUS17.TXT  MACUS18.TXT  MACUS19.TXT  MACUS20.TXT  MACUS21.TXT  MACUS23.TXT  MACUS25.TXT  MACUS27.TXT  MACUS28.TXT  MACUS29.TXT  MACUS3.TXT  MACUS30.TXT  (+67 more)
data/flight_one/app/: data2.csv  data3.csv
data/flight_one/board/: LOGS0.TXT  LOGS11.TXT  LOGS12.TXT  LOGS14.TXT  LOGS17.TXT  LOGS19.TXT  LOGS2.TXT  LOGS20.TXT  LOGS21.TXT  LOGS22.TXT  LOGS24.TXT  LOGS25.TXT  LOGS27.TXT  LOGS28.TXT  LOGS29.TXT  LOGS32.TXT  LOGS33.TXT  LOGS38.TXT  LOGS39.TXT  LOGS41.TXT  LOGS5.TXT  LOGS6.TXT  LOGS8.TXT  LOGS9.TXT  MACUS0.TXT  MACUS1.TXT  MACUS16.TXT  MACUS2.TXT  MACUS22.TXT  MACUS24.TXT  MACUS26.TXT  MACUS31.TXT  MACUS32.TXT  MACUS33.TXT  MACUS34.TXT  MACUS35.TXT  MACUS37.TXT  MACUS38.TXT  MACUS4.TXT  MACUS41.TXT  (+84 more)
data/second_flight/board/: LOGS0.TXT  LOGS1.TXT  LOGS10.TXT  LOGS11.TXT  LOGS12.TXT  LOGS13.TXT  LOGS14.TXT  LOGS15.TXT  LOGS16.TXT  LOGS17.TXT  LOGS18.TXT  LOGS19.TXT  (+153 more)
notebooks/: touch_sensors.ipynb
scripts/: mp4_to_webx.py
(+148 files in other folders)
