[tool.poetry]
name = "macki-data"
version = "0.1.0"
description = ""
authors = ["Kuba <jakkub68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
streamlit-navigation-bar = "^3.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
